syntax = "proto3";

package paper_storage_server;

option go_package = "paper-storage-server/paperpb";

service PaperStorageService {
  
  rpc AddPaper (AddPaperArgs) returns (AddPaperResponse);
  rpc ListPapers (ListPapersArgs) returns (ListPapersResponse);
  rpc GetPaperDetails (GetPaperDetailsArgs) returns (GetPaperDetailsResponse);
  rpc FetchPaperContent (FetchPaperContentArgs) returns (FetchPaperContentResponse);
}

message Paper {
  int32 paper_id = 1;
  string title = 2;
  string author = 3;
  string format = 4;
  bytes content = 5;
}

message AddPaperArgs {
  Paper paper = 1;
}

message AddPaperResponse {
  string result = 1;
}

message ListPapersArgs {}

message ListPapersResponse {
  repeated Paper papers = 1;
}

message GetPaperDetailsArgs {
  int32 paper_id = 1;
}

message GetPaperDetailsResponse {
  Paper paper = 1;
}

message FetchPaperContentArgs {
  int32 paper_id = 1;
}

message FetchPaperContentResponse {
  bytes content = 1;
}
